--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,6 +29,12 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "standard": "^17.1.2",
     "vite": "^6.1.0"
+  },
+  "eslintConfig": {
+    "extends":[
+      "standard"
+    ]
   }
 }
